--- a/src/app/recipe-list.component.html
+++ b/src/app/recipe-list.component.html
@@ -1,5 +1,5 @@
 <ul *ngIf="recipes">
   <li *ngFor="let recipe of recipes">
-    <a href="#">{{recipe.name}}</a>
+    <a [routerLink]="['recipe', recipe.id]">{{recipe.name}}</a>
   </li>
 </ul>
