--- a/src/app/recipe-list.component.html
+++ b/src/app/recipe-list.component.html
@@ -1,5 +1,9 @@
-<ul *ngIf="recipes">
-  <li *ngFor="let recipe of recipes">
-    <a [routerLink]="['recipe', recipe.id]">{{recipe.name}}</a>
-  </li>
-</ul>
+<nav>
+  <a routerLink="/new">Add</a>
+
+  <ul *ngIf="recipes">
+    <li *ngFor="let recipe of recipes">
+      <a [routerLink]="['recipe', recipe.id]">{{recipe.name}}</a>
+    </li>
+  </ul>
+</nav>
