Allow recipe edits
I reused the RecipeDialog component for making recipe edits, but now I
had to check if the router link has a recipe id in it. If so, it'll edit
the recipe with that id. Otherwise it's the same old Add Recipe
function.

I don't know, the checks that I made looks clumsy and "not
Angular-like".

--- a/src/app/recipe-detail.component.html
+++ b/src/app/recipe-detail.component.html
@@ -1,5 +1,8 @@
 <section *ngIf="selectedRecipe">
-  <h2>{{selectedRecipe.name}}</h2>
+  <header>
+    <h2>{{selectedRecipe.name}}</h2>
+    <a routerLink="edit">Edit</a>
+  </header>
   <ul>
     <li *ngFor="let ingredient of selectedRecipe.ingredients">
       {{ingredient}}
