Enable deleting recipes
I figured I could just sneak a confirmation in RecipeDetail using ngIf
and show the confirmation inline, instead of making a modal for it.

--- a/src/app/recipe-detail.component.html
+++ b/src/app/recipe-detail.component.html
@@ -1,7 +1,15 @@
 <section *ngIf="selectedRecipe">
   <header>
     <h2>{{selectedRecipe.name}}</h2>
-    <a routerLink="edit">Edit</a>
+    <div *ngIf="!willDelete">
+      <a routerLink="edit">Edit</a>
+      <button (click)="showDeleteConfirmation()">Delete</button>
+    </div>
+    <div *ngIf="willDelete">
+      <p>Do you really want to delete this recipe?</p>
+      <button (click)="deleteRecipe()">Delete</button>
+      <button (click)="hideDeleteConfirmation()">Cancel</button>
+    </div>
   </header>
   <ul>
     <li *ngFor="let ingredient of selectedRecipe.ingredients">
