Style add recipe button

--- a/src/app/recipe-list.component.html
+++ b/src/app/recipe-list.component.html
@@ -1,7 +1,12 @@
 <nav>
   <header>
     <h2>Recipes</h2>
-    <a routerLink="/new">Add</a>
+    <button
+        class="btn btn-default btn-sm btn-block"
+        routerLink="/new"
+        routerLinkActive="active">
+      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New Recipe
+    </button>
   </header>
 
   <div class="list-group" *ngIf="recipes">
