--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
+<nav class="navbar navbar-inverse">
+  <div class="container">
+    <header class="nav-header">
+      <a class="navbar-brand" routerLink="/">Recipe Box</a>
+    </header>
+
+    <ul class="nav navbar-nav">
+      <li routerLinkActive="active">
+        <a routerLink="/new"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New Recipe</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-3">
