--- a/src/app/recipe-detail.component.html
+++ b/src/app/recipe-detail.component.html
@@ -1,19 +1,30 @@
-<section *ngIf="selectedRecipe">
-  <header>
+<section *ngIf="selectedRecipe" class="panel panel-default">
+  <header class="panel-heading">
     <h2>{{selectedRecipe.name}}</h2>
-    <div *ngIf="!willDelete">
-      <a routerLink="edit">Edit</a>
-      <button (click)="showDeleteConfirmation()">Delete</button>
+    <div class="btn-group btn-group-sm" *ngIf="!willDelete">
+      <button class="btn btn-default" type="button" routerLink="edit">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        Edit
+      </button>
+      <button class="btn btn-danger" type="button" (click)="showDeleteConfirmation()">
+        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+        Delete
+      </button>
     </div>
     <div *ngIf="willDelete">
-      <p>Do you really want to delete this recipe?</p>
-      <button (click)="deleteRecipe()">Delete</button>
-      <button (click)="hideDeleteConfirmation()">Cancel</button>
+      <p class="text-danger">Do you really want to delete this recipe?</p>
+      <div class="btn-group btn-group-sm">
+        <button class="btn btn-danger" (click)="deleteRecipe()">Delete</button>
+        <button class="btn btn-default" (click)="hideDeleteConfirmation()">Cancel</button>
+      </div>
     </div>
   </header>
-  <ul>
-    <li *ngFor="let ingredient of selectedRecipe.ingredients">
-      {{ingredient}}
-    </li>
-  </ul>
+  <section class="panel-body">
+    <h3>Ingredients</h3>
+    <ul>
+      <li *ngFor="let ingredient of selectedRecipe.ingredients">
+        {{ingredient}}
+      </li>
+    </ul>
+  </section>
 </section>
