Fix navbar to top

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <header class="nav-header">
       <a class="navbar-brand" routerLink="/">Recipe Box</a>
