--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,18 +3,15 @@
     <header class="nav-header">
       <a class="navbar-brand" routerLink="/">Recipe Box</a>
     </header>
-
-    <ul class="nav navbar-nav">
-      <li routerLinkActive="active">
-        <a routerLink="/new"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New Recipe</a>
-      </li>
-    </ul>
   </div>
 </nav>
 
 <div class="container">
   <div class="row">
     <div class="col-sm-3">
+      <button class="btn btn-primary btn-sm btn-block" routerLink="/new" routerLinkActive="active">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New Recipe
+      </button>
       <app-recipe-list [recipes]="recipes"></app-recipe-list>
     </div>
     <div class="col-sm-9">
