--- a/src/app/recipe-list.component.html
+++ b/src/app/recipe-list.component.html
@@ -1,11 +1,11 @@
 <nav>
   <div class="list-group" *ngIf="recipes">
-    <a
+    <button
         class="list-group-item"
         routerLinkActive="active"
         *ngFor="let recipe of recipes"
         [routerLink]="['recipe', recipe.id]">
       {{recipe.name}}
-    </a>
+    </button>
   </div>
 </nav>
