--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,12 @@
     <header class="nav-header">
       <a class="navbar-brand" routerLink="/">Recipe Box</a>
     </header>
+
+    <ul class="nav navbar-nav navbar-right">
+      <li>
+        <a href="https://github.com/kevcomedia/ng-recipe-box" target="_blank">GitHub</a>
+      </li>
+    </ul>
   </div>
 </nav>
 
