Add Font Awesome icon for the GitHub link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
     <ul class="nav navbar-nav navbar-right">
       <li>
-        <a href="https://github.com/kevcomedia/ng-recipe-box" target="_blank">GitHub</a>
+        <a href="https://github.com/kevcomedia/ng-recipe-box" target="_blank"><span class="fa fa-github fa-lg" aria-hidden="true"></span> GitHub</a>
       </li>
     </ul>
   </div>
