--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-3">
-      <button class="btn btn-primary btn-sm btn-block" routerLink="/new" routerLinkActive="active">
+      <button class="btn btn-default btn-sm btn-block" routerLink="/new" routerLinkActive="active">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New Recipe
       </button>
       <app-recipe-list [recipes]="recipes"></app-recipe-list>
